--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -16,66 +16,68 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+		<form action="{% url 'add_cart' product.id %}" method="POST">
+			{% csrf_token %}
+			<article class="content-body">
 
-<h2 class="title">{{product.product_name}}</h2>
+				<h2 class="title">{{ product.product_name }}</h2>
 
-<div class="mb-3"> 
-	<var class="price h4">${{product.price}}</var> 
-</div> 
+				<div class="mb-3"> 
+					<var class="price h4">${{ product.price }}</var> 
+				</div> 
 
-<p>
-    {{product.description}}
-</p>
+				<p>{{ product.description }}</p>
+				<hr>
+				<!-- colors -->
+				<div class="row">
+					<div class="item-option-select">
+						<h6>Choose Color</h6>
+						<select name="color" class="form-control " required>
+							<option value="" disabled selected> Select </option>
+							{% for color in product.variation_set.colors %}
+								<option value="{{ color.variation_value | lower }}">{{ color.variation_value | capfirst }}</option>
+							{% endfor %}
+						</select>
+					</div>
+				</div>
+				<!-- sizes -->
+				<div class="row mt-3">
+					<div class="item-option-select">
+						<h6>Select Size</h6>
+						<select name="size" class="form-control ">
+							<option value="" disabled selected> Select </option>
+							{% for size in product.variation_set.sizes %}
+								<option value="{{ size.variation_value | lower }}">{{ size.variation_value | capfirst }}</option>
+							{% endfor %}
+						</select>
+					</div>
+				</div>
+				<hr>
 
+				<!-- دکمه‌های افزودن به سبد خرید -->
+				{% if product.stock <= 0 %}
+					<h5 class="text-danger">Out Of Stock</h5>
+				{% else %}
+					{% comment %} {% if in_cart %}
+						<button type="button" class="btn btn-success" disabled>
+							<span class="text">Added to Cart</span> 
+							<i class="fas fa-check"></i>  
+						</button>
+						<a href="{% url 'cart' %}" class="btn btn-outline-primary">
+							<span class="text">View Cart</span> 
+							<i class="fas fa-eye"></i>  
+						</a>
+					{% else %} {% endcomment %}
+						<button type="submit" class="btn btn-primary">
+							<span class="text">Add to cart</span> 
+							<i class="fas fa-shopping-cart"></i>  
+						</button>
+					{% comment %} {% endif %} {% endcomment %}
+				{% endif %}
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<hr>
-	{% if product.stock <= 0 %}
-		<h5 class="text-danger">Out Of Stock</h5>
-	{% else %}
-		<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-	{% endif %}
-	
-</article> <!-- product-info-aside .// -->
+			</article>
+		</form>
+
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
